--- a/admin/index/system/user-management/role-setting.html
+++ b/admin/index/system/user-management/role-setting.html
@@ -17,7 +17,7 @@
 <body>
 <div class="layui-row">
     <div class="col-xs-12">
-        <table id="table_basic" lay-filter="basic"></table>
+        <table id="table" lay-filter=""></table>
     </div>
 </div>
 
@@ -48,45 +48,46 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table',function(){
-        var table = layui.table;
-
-        //方法级渲染
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            ,cols: [[ //表头
-                {checkbox:true,fixed:true}
-                , {field: 'job-number', title: '工号', width: 150}
-                , {field:'name',title:'用户名',width:300}
-                , {field:'role',title:'角色',minWidth:300}
-                , {title:'操作',toolbar:'#barDemo',width:150}
-            ]]
-            , "data": [
-                {
-                    "job-number": '',
-                    "name": "",
-                    "role":''
-                }
-            ]
-        });
-        //监听行工具事件
-        table.on('tool(test)', function(obj){
-            var data = obj.data;//获得当前行数据
-            if(obj.event === 'edit'){//编辑
-                //do something
-            } else if(obj.event === 'detail'){//查看
-                //do something
-            }
-        });
-    })
+addTable ={
+    table:{
+        cols: [[ //表头
+            {checkbox:true,fixed:true}
+            , {field: 'job-number', title: '工号', width: 150,sort:true}
+            , {field:'name',title:'用户名',width:300}
+            , {field:'role',title:'角色',minWidth:300}
+            , {title:'操作',toolbar:'#barDemo',width:150,align:'center'}
+        ]]
+        , "data": [
+            {
+                "job-number":"12355888",
+                "name":"包洪初",
+                "role":"使用部门医学装备管理小组组长;"
+            },{
+                "job-number":"12355888",
+                "name":"包洪初",
+                "role":"使用部门医学装备管理小组组长;"
+            },{
+                "job-number":"12355888",
+                "name":"包洪初",
+                "role":"使用部门医学装备管理小组组长;"
+            },{
+                "job-number":"12355888",
+                "name":"包洪初",
+                "role":"使用部门医学装备管理小组组长;"
+            },{
+                "job-number":"12355888",
+                "name":"包洪初",
+                "role":"使用部门医学装备管理小组组长;"
+            }]
+        , done: function (obj) {
+            tableFunc({
+                "obj":obj,
+                "addMsg":2,
+                "addLink":"table1"
+            })
+        }
+    }
+}
 </script>
 </body>
 </html>
