--- a/admin/index/system/user-management/user-setting.html
+++ b/admin/index/system/user-management/user-setting.html
@@ -13,7 +13,7 @@
 <body>
 <div class="layui-row">
     <div class="col-xs-12">
-        <table id="table_basic" lay-filter="basic"></table>
+        <table id="table" lay-filter="basic"></table>
     </div>
 </div>
 <script type="text/html" id="barDemo">
@@ -44,56 +44,58 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table',function(){
-        var table = layui.table;
-
-        //方法级渲染
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            ,cols: [[ //表头
-                {checkbox:true,fixed:true}
+addTable ={
+    table:{
+        cols: [[ //表头
+            {checkbox:true,fixed:true}
                 , {field: 'division', title: '部门', minWidth: 200}
                 , {field: 'job-number', title: '工号', minWidth: 150}
                 , {field:'name',title:'姓名',minWidth:150}
                 , {field:'tel-number',title:'手机号码',minWidth:150}
                 , {field:'email',title:'电子邮箱'}
                 , {title:'操作',toolbar:'#barDemo',width:150,align:"center"}
-            ]]
-            , "data": [
-                {
-                    "division": '',
-                    "job-number": "",
-                    "name":'',
-                    "tel-number":'',
-                    "email":''
-                },
-                {
-                    "division": '',
-                    "job-number": "",
-                    "name":'',
-                    "tel-number":'',
-                    "email":''
-                }
-            ]
-        });
-        //监听行工具事件
-        table.on('tool(test)', function(obj){
-            var data = obj.data;//获得当前行数据
-            if(obj.event === 'edit'){//编辑
-                //do something
-            } else if(obj.event === 'detail'){//查看
-                //do something
-            }
-        });
-    })
+        ]]
+        , "data": [
+            {
+                "division":"心血管内科",
+                "job-number":"00000",
+                "name":"全院",
+                "tel-number":"",
+                "email":""
+            },{
+                "division":"心血管内科",
+                "job-number":"00000",
+                "name":"全院",
+                "tel-number":"",
+                "email":""
+            },{
+                "division":"心血管内科",
+                "job-number":"00000",
+                "name":"全院",
+                "tel-number":"",
+                "email":""
+            },{
+                "division":"心血管内科",
+                "job-number":"00000",
+                "name":"全院",
+                "tel-number":"",
+                "email":""
+            },{
+                "division":"心血管内科",
+                "job-number":"00000",
+                "name":"全院",
+                "tel-number":"",
+                "email":""
+            }]
+        , done: function (obj) {
+//            tableFunc({
+//                "obj":obj,
+//                "addMsg":2,
+//                "addLink":"table1"
+//            })
+        }
+    }
+}
 </script>
 </body>
 </html>
